making button animated
changed svg tags for button to make it animated

--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@
         <g filter="url(#filter0_i)">
         <rect x="22" y="22" width="336" height="139" rx="69.5" fill="#455A64"/>
         </g>
-        <g filter="url(#filter1_d)">
-        <rect x="38" y="35" width="240" height="113" rx="56.5" fill="url(#paint0_linear)"/>
-        </g>
+        <rect class="toggleSw" x="38" y="35" width="240" height="113" rx="56.5" fill="url(#paint0_linear)"/>
         <g filter="url(#filter2_i)">
         <rect x="383" y="522" width="500" height="139" rx="69.5" transform="rotate(-90 383 522)" fill="#455A64"/>
         </g>
